# midi-game

./: CMakeLists.txt  midi.service  todo
code/: common.h  main.cpp
rtmidi/: DartConfiguration.tcl
